# saqq-website

./: .replit  LICENSE  README.md  pyproject.toml  syed.py
templates/: footer.html  home.html  jobitems.html  nav.html
